# renomear_pdf_do_certificado_com_nome_participante

./: .gitignore  pyproject.toml
renomear_pdf_do_certificado_com_nome_participante/: main.py
tests/: test_renomear_pdf_do_certificado_com_nome_participante.py
