[tool.poetry]
name = "renomear_pdf_do_certificado_com_nome_participante"
version = "0.1.0"
description = ""
authors = ["ricardoferreira68 <jrsf68@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
